updated animation in components

--- a/src/index.css
+++ b/src/index.css
@@ -148,7 +148,7 @@
     }
 
     .indicator-line {
-    @apply h-1 w-px rounded-full bg-white transition-all duration-200 ease-in-out;
+    @apply h-2 w-px flex gap-x-20 rounded-full bg-white transition-all duration-300 ease-in-out; 
     }
 
     .indicator-line.active {
