--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,11 @@
         scroll-behavior: smooth;
     }
 
+    ::selection {
+        background-color: #4FE8DD; /* blue 300 */
+        color: #000000;           /* blue 100 */
+    }
+
     body {
     width: 100dvw;
     overflow-x: hidden;
@@ -274,4 +279,15 @@
         transform: translateY(66%) scale(0.65);
         opacity: 0.8;
     }
+    }
+
+    
+    #background-video {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        z-index: -50;
     }
